Use filter,fields, implement appointmments\available